# customer-churn-mlops

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.mlflow  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  retraining-check.yml
airflow/dags/: data_ingestion_dag.py
docs/: MODEL_DEPLOYMENT_GUIDE.md
helm/churn-prediction/: Chart.yaml  values.yaml
helm/churn-prediction/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
models/: __init__.py  base_model.py  churn_predictor.py  ensemble_model.py  feature_engineering.py  model_evaluator.py  model_trainer.py
models/saved_models/: churn_model_v1.pkl  churn_model_v2.pkl  feature_scaler.pkl  label_encoder.pkl
scripts/: deploy.sh  init_db.sql
src/data/: validation.py
src/features/: engineering.py
